--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "next": "12.0.3",
+    "pg-promise": "^10.11.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6"
