--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "bcryptjs": "^2.4.3",
     "next": "12.0.3",
+    "next-auth": "^3.29.0",
     "pg-promise": "^10.11.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
