--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "pg-promise": "^10.11.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.6"
+    "react-redux": "^7.2.6",
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
