--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
     "bcryptjs": "^2.4.3",
+    "file-saver": "^2.0.5",
     "next": "12.0.3",
     "next-auth": "^3.29.0",
     "pg-promise": "^10.11.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-html2pdf": "^1.0.1",
     "react-redux": "^7.2.6",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
