--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "next": "12.0.3",
     "next-auth": "^3.29.0",
     "pg-promise": "^10.11.1",
+    "print-js": "^1.6.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-html2pdf": "^1.0.1",
     "react-redux": "^7.2.6",
     "xlsx": "^0.17.4"
   },
