--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "pg-promise": "^10.11.1",
     "print-js": "^1.6.0",
     "react": "17.0.2",
+    "react-data-table-component": "^7.4.5",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
+    "styled-components": "^5.3.3",
     "xlsx": "^0.17.4"
   },
   "devDependencies": {
