--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "print-js": "^1.6.0",
     "react": "17.0.2",
     "react-data-table-component": "^7.4.5",
+    "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
