--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-data-table-component": "^7.4.5",
     "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
+    "react-easy-marquee": "^1.1.4",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
     "xlsx": "^0.17.4"
