--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-datepicker": "^4.3.0",
     "react-dom": "17.0.2",
     "react-easy-marquee": "^1.1.4",
+    "react-floating-whatsapp": "^4.0.5",
     "react-redux": "^7.2.6",
     "styled-components": "^5.3.3",
     "xlsx": "^0.17.4"
