--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
     "@reduxjs/toolkit": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "file-saver": "^2.0.5",
+    "formidable": "^2.0.1",
+    "multer": "^1.4.3",
     "next": "12.0.3",
     "next-auth": "^3.29.0",
+    "next-connect": "^0.11.0",
     "pg-promise": "^10.11.1",
     "print-js": "^1.6.0",
     "react": "17.0.2",
