--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@reduxjs/toolkit": "^1.6.2",
     "bcryptjs": "^2.4.3",
     "file-saver": "^2.0.5",
+    "jspdf": "^2.4.0",
+    "jspdf-autotable": "^3.5.23",
     "multer": "^1.4.3",
     "next": "12.0.3",
     "next-auth": "^3.29.0",
