--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,5 +18,5 @@ jobs:
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
           script: |
-            cd /var/www/makasar112
+            cd /var/www/makassar112
             git pull https://${{ secrets.TOKEN }}@github.com/Dinel13/makassar112.git deploy
