feat: test cicd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,6 @@ jobs:
     steps:
       - name: SSH and deploy node app
         uses: appleboy/ssh-action@master
-        env:
-         FOO: ${{ secrets.SSH_PASSWORD }}
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -22,5 +20,5 @@ jobs:
           script: |
             cd /var/www/makassar112
             sudo su
-            $FOO
+            -s ${{ secrets.SSH_PASSWORD }}
             git pull https://${{ secrets.TOKEN }}@github.com/Dinel13/makassar112.git deploy
